test/qp/bad/classic1.qp
-- Another example of infinite type construction.
let rec omega l =
  match l with
    [] -> ()
  | x:xs -> (x, omega xs)
;;

